--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
     font-style: normal;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* header */
 
 header {
@@ -94,7 +98,7 @@ header {
     content: "";
     position: absolute;
     left: 0;
-    bottom: 0; 
+    bottom: -1px; 
     width: 100%;
     height: 1px;
     background: linear-gradient(125.04deg, #632EE3 5.68%, #9F62F2 88.38%);
@@ -128,6 +132,9 @@ header {
 
 .hero {
     background: transparent;
+    max-height: 800px;
+    padding-top: 2rem;
+    overflow: hidden;
 }
 
 .hero-container{
@@ -137,6 +144,8 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
 }
 
 .hero-title {
@@ -166,8 +175,48 @@ header {
     font-size: 20px;
     text-align: center;
     color: #627382;
+    width: 70%;
+    max-width: 1000px;
 }
 
+.download-btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.download-btn {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 24px;
+    gap: 10px;
+    width: 206px;
+    height: 56px;
+    border: 1px solid #D2D2D2;
+    border-radius: 4px;
+    outline: none;
+    background-color: transparent;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    text-transform: capitalize;
+    color: #001931;
+    cursor: pointer;
+}
+
+.hero-image {
+    margin: 1rem auto 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 71%;
+}
 
 /* apps page */
 .app-hero-container {
