- added trust section

--- a/src/index.css
+++ b/src/index.css
@@ -215,7 +215,69 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 71%;
+    width: 65%;
+}
+
+/* trust section */
+
+.trust {
+    padding: 80px;
+    background: linear-gradient(125.04deg, #632EE3 5.68%, #9F62F2 88.38%);
+}
+
+.trust-container {
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.2rem;
+}
+
+.trust-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #FFFFFF;
+}
+
+.trust-states {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 75%;
+}
+
+.state-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.state-top, .trust-bottom {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #FFFFFF;
+    opacity: 0.8;
+}
+
+.state-number {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 64px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #FFFFFF;
 }
 
 /* apps page */
