- completed hero section for all pages

--- a/src/index.css
+++ b/src/index.css
@@ -281,6 +281,11 @@ header {
 }
 
 /* apps page */
+
+.app-hero {
+    padding: 2rem;
+}
+
 .app-hero-container {
     display: flex;
     justify-content: center;
@@ -289,6 +294,25 @@ header {
     gap: 1rem;
     max-width: 1300px;
     margin: 0 auto;
+}
+
+.app-hero-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #001931;
+}
+
+.app-hero-description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+    color: #627382;
 }
 
 /* footer */
