--- a/src/index.css
+++ b/src/index.css
@@ -422,6 +422,38 @@ header {
     }
 }
 
+.all-apps-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 16px;
+    gap: 10px;
+    width: 145px;
+    height: 48px;
+    background: linear-gradient(125.04deg, #632EE3 5.68%, #9F62F2 88.38%);
+    border-radius: 4px;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: capitalize;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.all-apps-btn:hover {
+    transform: translateY(-4px);
+}
+
+.all-apps-link {
+    margin: 0 auto;
+}
 
 /* apps page */
 
