--- a/src/index.css
+++ b/src/index.css
@@ -638,6 +638,36 @@ header {
     color: #001931;
 }
 
+.app-details-below-hr {
+    width: 90%;
+    margin: 2rem auto;
+}
+
+.rating-section {
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.ratings-section-title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    color: #001931;
+}
+
+.ratings-chart {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    left: -30px;
+    padding-top: 1rem;
+}
+
 /* footer */
 
 footer {
