--- a/src/index.css
+++ b/src/index.css
@@ -494,7 +494,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1300px;
+    max-width: 1180px;
     width: 90%;
     margin: 0 auto;
 }
@@ -735,6 +735,112 @@ header {
 
 .back-btn-not-found:hover {
     transform: translateY(-5px);
+}
+
+/* installation page */
+
+.installed-apps {
+    padding: 1rem auto 1rem auto;
+}
+
+.installed-apps-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
+.installed-apps-tool {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: 1rem auto;
+}
+
+.installed-app-count {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    color: #001931;
+}
+
+.chevron-icon {
+  color: #495057; 
+}
+
+
+.sort-button-container {
+  position: relative; 
+  display: inline-block;
+}
+
+.sort-button-visual {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 155px;
+    padding: 10px 15px;
+    background-color: #f8f9fa;
+    border: 1px solid #dee2e6;
+    border-radius: 6px;
+    cursor: pointer;
+    text-align: left;
+    position: relative;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #627382;
+}
+
+.sort-button-visual:focus {
+  outline: none;
+}
+
+.chevron-icon {
+  color: #495057;
+}
+
+.dropdown-menu {
+  position: absolute; 
+  top: calc(100% + 5px); 
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  border: 1px solid #d1d5db;
+  border-radius: 6px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 5px 0;
+  margin: 0;
+  z-index: 1000;
+}
+
+.dropdown-menu li {
+  padding: 10px 15px;
+  font-size: 15px;
+  color: #4a5568;
+  cursor: pointer;
+  transition: background-color 0.15s ease-in-out;
+}
+
+.dropdown-menu li:hover {
+  background-color: #f3f4f6;
+}
+
+.chevron-icon {
+  color: #495057;
+  transition: transform 0.2s ease-in-out; 
+}
+
+.chevron-icon.open {
+  transform: rotate(180deg);
 }
 
 /* footer */
