--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,6 @@ body.no-scroll {
     font-style: normal;
     font-weight: 700;
     font-size: 72px;
-    line-height: 84px;
     text-align: center;
     text-transform: capitalize;
     color: #001931;
@@ -504,6 +503,54 @@ body.no-scroll {
 @media (max-width:1180px) {
     .hero-image {
         margin: 1rem auto -46px auto;
+    }
+}
+
+
+@media (max-width:768px){
+    .hero-title {
+        font-size: 50px;
+    }
+}
+
+@media (max-width:730px) {
+    .hero {
+        padding-top: 0;
+    }
+}
+
+
+@media (max-width:550px) {
+    .hero-description {
+        font-size: 16px;
+    }
+
+    .hero-title {
+        font-size: 40px;
+    }
+
+    .download-btns {
+        flex-direction: column;
+    }
+    .hero {
+        height: 85vh;
+        max-height: none;
+    }
+    .hero-image {
+        width: 100%;
+    }
+
+    header {
+        padding: 16px 30px;
+    }
+}
+
+@media (max-width:425px) {
+    .hero-description {
+        width: 90%;
+    }
+    .hero {
+        height: 82vh;
     }
 }
 
@@ -581,6 +628,30 @@ body.no-scroll {
 @media (max-width:768px) {
     .trust-title {
         font-size: 35px;
+    }
+}
+
+@media (max-width:730px){
+    .trust-states {
+        flex-direction: column;
+        gap: 4rem;
+    }
+    .trust-title {
+        max-width: 350px;
+    }
+}
+
+@media (max-width:425px){
+    .trust-title {
+        font-size: 23px;
+    }
+
+    .state-number {
+        font-size: 25px;
+    }
+
+    .state-item {
+        gap: 5px;
     }
 }
 
@@ -779,10 +850,29 @@ body.no-scroll {
     margin: 0 auto;
 }
 
+@media (max-width:425px) {
+    .trending-title {
+        font-size: 25px;
+    }
+
+    .trending-title {
+        font-size: 25px;
+    }
+
+    .trending-description {
+        font-size: 15px;
+        text-align: center;
+        width: 80%;
+        margin: 1rem auto;
+    }
+
+}
+
 /* apps page */
 
 .app-hero {
     padding: 2rem;
+    margin: 2rem auto;
 }
 
 .app-hero-container {
@@ -866,6 +956,34 @@ body.no-scroll {
     margin-bottom: 1rem;
 }
 
+ @media (max-width:1024px) {
+    .apps-tools {
+        width: 80%;
+    }
+ }
+
+ @media (max-width:600px) {
+    .app-hero-title {
+        font-size: 35px;
+    }
+
+    .app-hero-description {
+        font-size: 18px;
+        width: 70%;
+    }
+
+    .apps-tools {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .no-apps-there {
+        bottom: 0;
+    }
+ }
+
+ @media (max-width:550px) {
+
+ }
 /* app detail page */
 
 .app-details-container {
