--- a/src/index.css
+++ b/src/index.css
@@ -1063,7 +1063,7 @@ body.no-scroll {
     align-items: center;
     padding: 14px 20px;
     gap: 10px;
-    width: 239px;
+    width: fit-content;
     height: 52px;
     background: #00D390;
     border-radius: 4px;
